--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 erdos.png filter=lfs diff=lfs merge=lfs -text
 erdos.jpg filter=lfs diff=lfs merge=lfs -text
+slides.pdf filter=lfs diff=lfs merge=lfs -text
