--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@ erdos.jpg filter=lfs diff=lfs merge=lfs -text
 slides.pdf filter=lfs diff=lfs merge=lfs -text
 images/graphviz/cholesky-sample.png filter=lfs diff=lfs merge=lfs -text
 images/graphviz/forkjoin-sample.png filter=lfs diff=lfs merge=lfs -text
+images/results-fork.png filter=lfs diff=lfs merge=lfs -text
+images/results-poisson.png filter=lfs diff=lfs merge=lfs -text
+images/results-sparse.png filter=lfs diff=lfs merge=lfs -text
